fix: css issues on mobile devices and base path to work on swarm

--- a/src/screens/upload/flow/steps/confirm/ConfirmStep.module.css
+++ b/src/screens/upload/flow/steps/confirm/ConfirmStep.module.css
@@ -33,3 +33,12 @@
   width: 100%;
   max-width: 470px;
 }
+
+.label {
+  flex-shrink: 0;
+}
+
+.filename {
+  flex: 1;
+  margin-left: 12px;
+}
